# GoPiGo3_PiOS_Bookworm

./: .gitignore  LICENSE.md  README.md  Setup_PiOS_upgrade_bookworm.txt
Examples/: easy_Distance_Sensor.py.bookworm
ROS2_Humble/: 2_install_docker_pkgs.sh  5_run_ROS2_Humble_Docker_image.sh
ROS2_Humble/setups/: 2_install_docker_pkgs.sh  4_build_humble_desktop_container.sh
cpp/: CMakeLists.txt  README.md
cpp/src/: motors.cpp  servos.cpp  ultrasonic.cpp
extras/: gopigo3_tutor_docs.md
extras/imu/9250/: README.txt  imu_calib_load.py  kalman_start.py
extras/test/: test_GoPiGo3.sh
gpg_sw_changes/cpp/: README.md  gopigo3_cppConfig.cmake.in
gpg_sw_changes/i2c/: di_i2c.py.bookworm
imu/: README.txt
imu/9250/: imu_basic.py  imu_cal.py  madgwick_starter.py
imu/9250/gpg_mpu/: gpg_mpu9250_ga.py
picamera2/: snapJPG2_picamera2.py
setups/: EDLchat_setup.sh  EDLchat_setup_part5.sh  GoPiGo_Setup_part2.sh  Setup_32-bit_PiOS_Bookworm_Desktop.sh  Setup_PiOS_Bookworm_Desktop.sh  course-update.service  course-update.sh  first_boot_script.sh  first_boot_systemd.service.txt  install_GoPiGo3_PiOS_Bookworm.sh  install_course-update-service.sh  ip_feedback.sh  part2.sh  part3.sh  part4.sh  python_packages.sh  run_as_jupyter_user.sh  setup_software_i2c.sh  start_EDL_core_services.sh  test_ticks.py
setups/EDL/: jupyter.service  jupyter_lab_config.py  shellinabox_config  wayvnc_config  websockify.service
setups/EDL/EDL_Chat/: pyproject.toml
setups/EDL/EDL_Chat/my_jupyter_ai_custom/: __init__.py  providers.py
setups/EDLResourcesLib/: EDLResources.py  setup.py
setups/EDLResourcesLib/EDLResources.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
setups/audio/: 10-no-auto-switch.conf  user-runtime-dir.conf
web/html/: hostname  index.php
web/html/css/: main_buster.css  main_stretch.css
